@@ -1,6 +1,7 @@
 WebHelpers ChangeLog
 
 0.2.1 (**svn**)
+* Adding counter func to text helpers, patch from Jamie Wilkinson.
 * Sync'd Rails Text helper to 4994.
 * Sync'd Rails Asset tag helper to 4999.
 * Sync'd Rails Form tag helper to 5045, also doesn't apply to our version.
